--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -24,6 +24,7 @@
       height: auto;
       color: #fff;
       width: 100%;
+      margin-bottom: 16px;
     }
     &::after {
       content: "";
@@ -44,11 +45,7 @@
       z-index: -1;
       @media screen and (max-width: 840px) {
         content: "";
-        background: linear-gradient(
-          90deg,
-          rgba(34, 31, 29, 1) 0%,
-          rgba(142, 94, 10, 1) 100%
-        );
+        background: linear-gradient(90deg, $secondary 0%, $primary 100%);
         opacity: 0.82;
         position: absolute;
         left: 0;
@@ -117,11 +114,7 @@
     }
     &::after {
       content: "";
-      background: linear-gradient(
-        90deg,
-        rgba(34, 31, 29, 1) 0%,
-        rgba(142, 94, 10, 1) 100%
-      );
+      background: linear-gradient(90deg, $secondary 0%, $primary 100%);
       opacity: 0.82;
       position: absolute;
       left: 0;
@@ -145,7 +138,7 @@
     @media screen and (max-width: 840px) {
       position: relative;
       top: 0;
-      margin: 8px 0;
+      margin: 0 0 8px 0;
     }
     a {
       text-decoration: none;
@@ -176,6 +169,10 @@
           background: #352c2b;
           margin-top: 10px;
         }
+        &:hover,
+        &:focus {
+          background: url(../images/icon_setting_.png) no-repeat center center;
+        }
       }
       &::after {
         content: "";
@@ -205,6 +202,7 @@
       margin-left: 8px;
       @media screen and (max-width: 840px) {
         height: 48px;
+        line-height: 48px;
         padding: 0 16px;
       }
       &::after {
@@ -230,11 +228,7 @@
       &:focus {
         color: #fff;
         &::after {
-          background: linear-gradient(
-            0deg,
-            rgba(34, 30, 30, 1) 0%,
-            rgba(142, 94, 10, 1) 100%
-          );
+          background: linear-gradient(0deg, $secondary 0%, $primary 100%);
           opacity: 1;
         }
       }
@@ -243,9 +237,9 @@
   .refresh {
     position: absolute;
     right: 0;
-    bottom: 8px;
+    bottom: 16px;
     font-size: 16px;
-    color: #433b39;
+    color: $secondary;
     font-weight: bold;
     @media screen and (max-width: 840px) {
       position: relative;
@@ -255,19 +249,20 @@
       margin-bottom: 8px;
     }
     @media screen and (max-width: 500px) {
-      margin-top: 0;
+      margin: 8px 0 16px 0;
     }
-    button {
+    a {
       background: #9a712a;
       color: #fff;
       border: 1px solid #fff;
-      padding: 4px 8px;
+      padding: 8px;
       font-size: 16px;
       border-radius: 4px;
       margin-left: 4px;
-      transition: 0.5s;
+      transition: 0.5s background;
       cursor: pointer;
       box-shadow: 2px 2px 5px rgba(34, 30, 30, 0.3);
+      text-decoration: none;
       &:hover,
       &:focus {
         background: #433b39;
