--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -105,7 +105,7 @@ tr {
   margin-bottom: 2em;
 
   & > .tableScroll {
-    overflow-x: scroll;
+    // overflow-x: scroll;
     overflow-y: hidden;
     scroll-behavior: smooth;
     @media screen and (max-width: 768px) {
