--- a/css/lpoc.css
+++ b/css/lpoc.css
@@ -804,8 +804,44 @@ input[type=submit][disabled]:focus {
 .formWrap .formTable td > input[type=text]:only-child {
   width: 100%;
 }
-.formWrap .formTable td > input[type=password]:only-child {
+.formWrap .formTable td > .input_password {
+  position: relative;
+}
+.formWrap .formTable td > .input_password input.password {
   width: 100%;
+}
+.formWrap .formTable td > .input_password button.passwordEye {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  border: none;
+  color: transparent;
+  width: 26px !important;
+  height: 26px;
+  right: 15px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: transparent;
+}
+.formWrap .formTable td > .input_password button.passwordEye:before {
+  content: "";
+  width: 26px;
+  height: 26px;
+  display: block;
+  opacity: 0.8;
+}
+.formWrap .formTable td > .input_password button.passwordEye.show:before {
+  background: url(../images/icon_eyeOpen.svg) center no-repeat;
+}
+.formWrap .formTable td > .input_password button.passwordEye.hide:before {
+  background: url(../images/icon_eyeClose.svg) center no-repeat;
+}
+.formWrap .formTable td .pwRule ul {
+  list-style: disc;
+  padding-left: 22px;
+  line-height: 140%;
+  margin-top: 4px;
 }
 .formWrap .formTable td > select:only-child {
   width: 100%;
