--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -303,8 +303,48 @@ input[type="submit"][disabled]:focus {
       > input[type="text"]:only-child {
         width: 100%;
       }
-      > input[type="password"]:only-child {
-        width: 100%;
+      // > input[type="password"]:only-child {
+      //   width: 100%;
+      // }
+      > .input_password {
+        position: relative;
+        input.password {
+          width: 100%;
+        }
+        button.passwordEye {
+          padding: 0;
+          margin: 0;
+          position: absolute;
+          border: none;
+          color: transparent;
+          width: 26px !important;
+          height: 26px;
+          right: 15px;
+          top: 50%;
+          transform: translateY(-50%);
+          background: transparent;
+          &:before {
+            content: "";
+            width: 26px;
+            height: 26px;
+            display: block;
+            opacity: 0.8;
+          }
+          &.show:before {
+            background: url(../images/icon_eyeOpen.svg) center no-repeat;
+          }
+          &.hide:before {
+            background: url(../images/icon_eyeClose.svg) center no-repeat;
+          }
+        }
+      }
+      .pwRule {
+        ul {
+          list-style: disc;
+          padding-left: 22px;
+          line-height: 140%;
+          margin-top: 4px;
+        }
       }
       > select:only-child {
         width: 100%;
